ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_1/input.ts.stderr
error: Unexpected token ```. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_1/input.ts:3:5
  |
3 |     `a`: 321
  |     ^

